fix enterprise payment link and contract on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -636,10 +636,6 @@ i {
 }
 
 /*contract*/
-#contract-hero {
-  text-align: center;
-}
-
 #contract-hero h1 {
   margin-top: 120px;
 }
@@ -669,8 +665,13 @@ i {
   color: var(--red);
 }
 
-#contract-btns a:first-of-type {
-  margin-right: 20px;
+#contract-btns {
+  gap: 20px;
+  margin-top: 20px;
+}
+
+#contract-btns a:nth-child(2) {
+  background-color: var(--blue);
 }
 
 /*Media Queries*/
